--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic');
 /*Основные стили */
+/*TODO Проставить потом марджинги и пэддинги = 0 для всех списков. Чтобы от глобального уйти*/
 * {
   padding: 0;
   margin: 0;
@@ -13,6 +14,7 @@ body {
   line-height: 1.5;
   font-weight: 400;
   color: #000000;
+  position: relative;
 
 }
 
@@ -24,35 +26,48 @@ a {
 .slider__list,
 .slider__switcher-list {
   list-style: none;
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .services__list,
 .about-company__rpart-list,
-.partner-logo__list {
+.partner-logo__list,
+.about-company__lpart-list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .filter__grid-list,
 .filter__features-list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .catalog__sort-menu-list,
 .catalog__list,
 .catalog__sort-ascdesc-list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .paginator__list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 /*Основные блоки и их модификаторы*/
+/*TODO В IE11 надпись у кнопок уезжает вверх. Разобраться*/
 .button {
   min-height: 50px;
   border-radius: 3px;
@@ -157,9 +172,11 @@ a {
 .external-container {
   width: 100%;
 }
+
 .external-container--header {
   background-color: #eeeeee;
 }
+
 .internal-container {
   width: 1440px;
   margin: 0 auto;
@@ -167,21 +184,21 @@ a {
 
 .internal-container--header {
   padding-top: 49px;
+  background-color: #eeeeee;
 }
 
 .external-container--main {
   background-color: #ffffff;
+  /*TODO В IE11 этот отступ не воспринимается. Подумать,как сделать*/
+  margin-bottom: 62px;
+
 }
 
-/*.internal-container--main {*/
-
-/*}*/
 .main-header-nav-container {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   padding-left: 140px;
-  /*margin-bottom: 64px;*/
 }
 
 .main-header-nav {
@@ -206,6 +223,9 @@ a {
   justify-content: flex-end;
   align-items: center;
   padding-top: 15px;
+  background-image: url("../img/cart-icon.svg");
+  background-repeat: no-repeat;
+  background-position: left 32px;
 }
 
 .slider {
@@ -228,11 +248,13 @@ a {
 .slider__item--second-slide {
   background-image: url("../img/slide2.png");
   background-position: 495px 0;
+  z-index: 2;
 }
 
 .slider__item--third-slide {
   background-image: url("../img/slide3.png");
   background-position: 400px 20px;
+  z-index: 3;
 }
 
 .slider__button {
@@ -242,29 +264,6 @@ a {
   align-items: center;
 }
 
-
-.services {
-  padding-left: 140px;
-  padding-right: 140px;
-}
-
-.services__list {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.services__item {
-  width: 300px;
-  margin-right: 100px;
-  padding-top: 79px;
-}
-.services__icon {
-  margin-bottom: 19px;
-}
-.services__list:last-child {
-  margin-right: 0;
-}
 /*Остальные блоки*/
 .main-header-nav__logo-img {
   margin-right: 200px;
@@ -308,7 +307,7 @@ a {
   font-size: 55px;
   line-height: 1;
   font-weight: 400;
-  margin-bottom: 27px;
+  margin-bottom: 25px;
 }
 
 .slider__slogan--first-slide {
@@ -339,42 +338,140 @@ a {
   width: 370px;
 }
 
+.services {
+  padding-left: 140px;
+  padding-right: 140px;
+}
+
+.services__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  border-bottom: 2px solid #eeeeee;
+}
+
+.services__item {
+  width: 300px;
+  margin-right: 100px;
+  padding-top: 79px;
+}
+
+.services__icon {
+  margin-bottom: 17px;
+}
+
+.services__list:last-child {
+  margin-right: 0;
+}
+
 .services__title {
   font-size: 24px;
   line-height: 1.25;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
 }
+
 .services__plain-text {
-  margin-bottom: 35px;
+  margin-bottom: 32px;
 }
+
 .services__plain-text--web {
- width: 250px;
+  width: 250px;
 }
+
 .services__plain-text--soft {
-   width: 250px;
- }
+  width: 250px;
+}
+
 .services__plain-text--presentation {
   width: 250px;
 }
+
 .services__button {
-width: 160px;
+  width: 160px;
+  margin-bottom: 78px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.about-company__slogan,
-.modal-writeus__title {
+.about-company {
+  padding-left: 140px;
+  padding-right: 140px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+}
+
+.about-company__left-part {
+  width: 660px;
+  margin-right: 140px;
+  padding-top: 76px;
+}
+
+.about-company__slogan {
+  width: 650px;
   font-size: 45px;
   line-height: 1;
   font-weight: 500;
+  margin-bottom: 31px;
+}
+
+.about-company__plain-text {
+  width: 617px;
+  margin-bottom: 41px;
+}
+
+.about-company__lpart-item {
+  text-indent: 36px;
+  background: url("../img/list-symbol.png") no-repeat left center;
+  margin-bottom: 24px;
+}
+
+.about-company__lpart-list:last-child {
+  margin-bottom: 74px;
+}
+
+.about-company__right-part {
+  width: 360px;
+  padding-top: 41px;
+}
+
+.about-company__nerds-img {
+  margin-bottom: 30px;
 }
 
 .about-company__subtitle {
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.about-company__subtitle--lpart {
+  margin-bottom: 24px;
+}
+
+.about-company__subtitle--rpart {
+  margin-bottom: 57px;
+}
+
+.centered {
+  text-align: center;
+}
+
+.about-company__rpart-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.about-company__rpart-item {
+  margin-right: 20px;
+}
+
+.about-company__rpart-list:last-child {
+  margin-right: 0;
 }
 
 .about-company__percents {
@@ -383,74 +480,356 @@ width: 160px;
   font-weight: 700;
 }
 
+.about-company__percents-text {
+  margin-top: 16px;
+  width: 100px;
+  line-height: 1.313;
+}
+
 .about-company__rpart-item .about-company__plain-text {
   line-height: 18px;
+}
+
+.partner-logo {
+  padding-left: 140px;
+  padding-right: 140px;
+  margin-bottom: 80px;
+}
+
+.partner-logo__list {
+  padding-top: 46px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  border-top: 2px solid #eeeeee;
+  border-bottom: 2px solid #eeeeee;
+}
+
+.partner-logo__item {
+  position: relative;
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 36px;
+}
+
+.partner-logo__item:first-child {
+  justify-content: flex-start;
+  width: 250px;
+  margin-left: 30px;
+}
+
+.partner-logo__item:last-child {
+  width: 250px;
+  margin-left: 25px;
+}
+
+.partner-logo__item:not(:last-child)::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 2px;
+  height: 52px;
+  background-color: #eeeeee;
+  right: 0;
+  bottom: 30px;
+}
+
+.partner-logo__link {
+  opacity: 0.2;
+}
+
+.partner-logo__link:hover,
+.partner-logo__link:focus {
+  opacity: 1;
+}
+
+.partner-logo__link:active {
+  opacity: 0.1;
+}
+
+.contacts {
+  position: relative;
+}
+
+.contacts__requisites {
+  width: 319px;
+  height: 308px;
+  position: absolute;
+  top: 54px;
+  left: 140px;
+  background-color: #ffffff;
+  padding-top: 50px;
+  padding-left: 50px;
+  box-sizing: border-box;
 }
 
 .contacts__subtitle {
   font-size: 18px;
   line-height: 1.667;
   font-weight: 700;
+  margin-bottom: 22px;
 }
 
-.contacts__plain-text,
-.contacts__plain-text .contacts__tel {
+.contacts__address-text {
+  width: 202px;
+  margin-bottom: 15px;
+}
+
+.contacts__address-text,
+.contacts__address-text .contacts__tel {
   line-height: 1.125;
   font-style: normal;
 }
 
+.contacts__tel-text {
+  margin-bottom: 33px;
+}
+
+.contacts__button {
+  width: 219px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  padding-left: 140px;
+  padding-right: 140px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
 .footer__slogan {
+  display: block;
   font-size: 36px;
   line-height: 1;
   font-weight: 700;
+  margin-bottom: 10px;
 }
 
 .footer__discount-text {
   line-height: 1.375;
 }
 
+.footer__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-right: 127px;
+}
+
+.footer__list:last-child {
+  margin-right: 0;
+}
+
 .footer__social-button {
-  color: #ffffff;
-  background-color: #e1e1e1; /*TODO Убрать после стилизации значка*/
+  display: block;
+  width: 79px;
+  height: 79px;
+  border-radius: 50%;
+  margin-right: 12px;
+  background-color: #e1e1e1;
+  position: relative;
+}
+
+.footer__social-button--vk::before {
+  content: "";
+  width: 26px;
+  height: 15px;
+  position: absolute;
+  top: 32px;
+  left: 27px;
+  background-image: url("../img/vk-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.footer__social-button--vk:active::before {
+  opacity: 0.3;
+}
+
+/*.footer__social-button--fb {*/
+/*background-image: url("../img/fb-icon.svg");*/
+/*background-repeat: no-repeat;*/
+/*background-position: center center;*/
+/*}*/
+
+.footer__social-button--fb::before {
+  content: "";
+  width: 12px;
+  height: 22px;
+  position: absolute;
+  top: 29px;
+  left: 33px;
+  background-image: url("../img/fb-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.footer__social-button--fb:active::before {
+  opacity: 0.3;
+}
+
+.footer__social-button--insta::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 29px;
+  left: 29px;
+  background-image: url("../img/insta-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.footer__social-button--insta:active::before {
+  opacity: 0.3;
 }
 
 .footer__social-button:hover,
 .footer__social-button:focus {
-  color: #ffffff;
-  border: 0;
-  background-color: #e74246; /*TODO Убрать после стилизации значка*/
+  background-color: #e74246;
   outline: none;
 }
 
 .footer__social-button:active {
-  color: #e37376;
-  background-color: #d7373b; /*TODO Убрать после стилизации значка*/
+  background-color: #d7373b;
+}
+
+/*Стилизация модального окна "Напишите нам"*/
+.modal-window-container {
+  width: 960px;
+  padding-top: 67px;
+  padding-left: 100px;
+  position: absolute;
+  top: 1706px;
+  left: 470px;
+  box-sizing: border-box;
+  box-shadow: 0 0 40px rgba(00, 00, 00, 0.5);
+  background-color: #ffffff;
+
+}
+
+.modal-writeus__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-bottom: 40px;
+}
+
+.modal-writeus__title {
+  font-size: 45px;
+  line-height: 1;
+  font-weight: 500;
+  margin-right: 440px;
+}
+
+.modal-close-button {
+  width: 22px;
+  height: 22px;
+  background-image: url("../img/close-cross.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #ffffff;
+  opacity: 0.3;
+  border: none;
+  align-self: center;
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  opacity: 1;
+  outline: none;
+}
+
+.modal-close-button:active {
+  opacity: 0.1;
+}
+
+.modal-writeus__form {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 84px;
+}
+
+.modal-writeus__form-internal-container {
+  width: 760px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.modal-writeus__form-item {
+  width: 360px;
+}
+
+.modal-form__input-item {
+  width: 360px;
+  height: 50px;
+  box-sizing: border-box;
+  min-height: 33px;
+  margin-bottom: 30px;
+}
+
+.modal-form__input-item[placeholder] {
+  text-indent: 15px;
+}
+
+.modal-form__text-area {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 47px;
+  padding-top: 15px;
+}
+
+.modal-form__text-area[placeholder] {
+  text-indent: 15px;
 }
 
 .modal-writeus__label {
   line-height: 1.125;
   font-weight: 700;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .modal-form__input-item:invalid {
   border: 2px solid #e74246;
+  border-radius: 3px;
   color: #e74246;
 }
 
-.modal-form__input-item:hover {
+.modal-form__input-item:hover,
+.modal-form__text-area:hover {
   border: 2px solid #b4b9bb;
 }
 
-.modal-form__input-item:focus {
+.modal-form__input-item:focus,
+.modal-form__text-area:focus {
   border: 2px solid #000000;
   color: #444444;
   outline: 0;
 }
 
-.modal-form__input-item {
+.modal-form__input-item,
+.modal-form__text-area {
   line-height: 1.125;
   border: 2px solid #d7dcde;
   color: rgba(68, 68, 68, 0.5);
+}
+
+.modal-writeus__submit-button {
+  width: 260px;
 }
 
 .filter__fieldset {
@@ -474,11 +853,6 @@ width: 160px;
   border: 1px solid #eeeeee;
   background-color: #eeeeee;
 }
-
-/*.filter__grid-radiobutton:focus,*/
-/*.filter__features-checkbox:focus {*/
-/*outline:none;*/
-/*}*/
 
 .filter__grid-radiobutton:hover,
 .filter__features-checkbox:hover,
